--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -4,6 +4,8 @@
 	grid-template-rows: repeat(14, 1fr);
 	height: 100vh;
 	width: 100vw;
+	position: relative;
+	overflow-y: hidden;
 }
 .head {
 	grid-column: 1/7;
@@ -21,4 +23,63 @@
 .search {
 	grid-column: 2/7;
 	grid-row: 3/4;
+}
+@media screen and (max-width: 900px) {
+	.search {
+		grid-column: 1/7;
+	}
+	.view {
+		grid-column: 1/7;
+	}
+	.body {
+		overflow-x: hidden;
+	}
+	.nav {
+		position: absolute;
+		left: 0px;
+		height: 86vh;
+		grid-row: 3/15;
+		width: 50vw;
+		transform: translateX(-100%);
+		transition: transform 0.5s ease;
+	}
+	.nav .navLinks {
+		opacity: 0;
+		transition: all 0.5s ease;
+	}
+	.head i {
+		display: flex;
+		padding-left: 20px;
+		padding-right: 5px;
+	}
+	.head .logo-title {
+		font-size: 30px;
+	}
+}
+@media screen and (max-width: 540px) {
+	.head .logo-title {
+		font-size: 25px;
+		display: hidden;
+	}
+	.head .head-logo {
+		width: 25%;
+	}
+}
+@media screen and (max-width: 380px) {
+	.head .logo-title {
+		font-size: 15px;
+	}
+}
+.nav-active {
+	transform: translateX(0%);
+}
+@keyframes navlinksfade {
+	from {
+		opacity: 0;
+		transform: translateX(-50px);
+	}
+	to {
+		opacity: 1;
+		transform: translateX(0px);
+	}
 }
