--- a/src/Home/Navigation/Navigation.css
+++ b/src/Home/Navigation/Navigation.css
@@ -4,6 +4,7 @@
 	flex-direction: column;
 	align-items: center;
 	justify-content: space-around;
+	z-index: 1;
 }
 .dp {
 	width: 15vh;
@@ -14,6 +15,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	margin: 10px;
 }
 .user {
 	display: flex;
@@ -33,4 +35,6 @@
 }
 .username {
 	padding: 10px 0;
+}
+@media screen and (max-width: 900px) {
 }
