--- a/src/Home/Recipe/Recipe.css
+++ b/src/Home/Recipe/Recipe.css
@@ -15,9 +15,12 @@
 	box-shadow: 0px 3px 6px rgba(0, 0, 0, 28%);
 	overflow: hidden;
 	background: rgba(255, 255, 255, 0.9);
+	transition: all 0.3s ease;
+	cursor: pointer;
 }
 .recipe:hover {
-	border: 1px solid rgba(0, 0, 0, 0.3);
+	/*border: 1px solid rgba(0, 0, 0, 0.3);*/
+	transform: scale(1.02, 1.02);
 }
 .food-image {
 	grid-column: 1/2;
@@ -34,7 +37,6 @@
 	grid-row: 2/5;
 	line-height: 30px;
 	display: flex;
-	align-items: center;
 	width: 100%;
 	height: 100%;
 	padding: 8px;
@@ -43,4 +45,41 @@
 	grid-column: 2/3;
 	grid-row: 1/2;
 	font-family: Brush Script MT;
+}
+@media screen and (max-width: 400px) {
+	.recipe {
+		display: grid;
+		grid-template-rows: repeat(5, 1fr);
+		grid-template-columns: 1fr;
+		height: 75vh;
+		width: 90%;
+		border-radius: 10px;
+		box-shadow: 0px 3px 6px rgba(0, 0, 0, 28%);
+		background: rgba(255, 255, 255, 0.9);
+		margin-left: 20px;
+	}
+	.food-image {
+		grid-column: 1/2;
+		grid-row: 1/3;
+		height: 100%;
+		width: 100%;
+		border-bottom-left-radius: 10px;
+		border-top-left-radius: 10px;
+		background-size: cover;
+	}
+
+	.ingridients {
+		grid-column: 1/2;
+		grid-row: 4/6;
+		line-height: 30px;
+		display: flex;
+		width: 100%;
+		height: 100%;
+		padding: 8px;
+	}
+	.recipe-name {
+		grid-column: 1/2;
+		grid-row: 3/4;
+		font-family: Brush Script MT;
+	}
 }
